# Capstone-Project

./: .gitignore  README.md  code check.yml  noxfile.py  pyproject.toml
.github/workflows/: code check.yml
capstone_project/: data.py
mlruns/7/38ffb0f0403b431ba9d8ace9919290c8/: meta.yaml
mlruns/7/38ffb0f0403b431ba9d8ace9919290c8/artifacts/Random Forest/: MLmodel  conda.yaml  requirements.txt
mlruns/7/38ffb0f0403b431ba9d8ace9919290c8/metrics/: f1_score  precision  recall
mlruns/7/38ffb0f0403b431ba9d8ace9919290c8/tags/: mlflow.log-model.history
src/capstone_project/: data.py  pipeline.py  train.py  tune.py
tests/: integration_test.py  test_integration.py  test_unit.py  unit_test.py
tests/fixtures/: extract.py  fixture.csv
