[tool.poetry]
name = "Capstone-Project"
version = "0.1.0"
description = ""
authors = ["AnastasiiaSt <anastasiiastv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"
numpy = "^1.22.3"
pandas = "^1.4.2"
pandas-profiling = "^3.2.0"
click = "^8.1.3"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
